[package]
name = "ccc"
version = "0.1.2"
edition = "2021"
description = "A lightweight Ratatui scheduler for Claude Code continuation prompts"
license = "MIT"
repository = "https://github.com/egesecgin/ccc"
readme = "README.md"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
